--- a/vignettes/archR.Rmd
+++ b/vignettes/archR.Rmd
@@ -51,8 +51,8 @@ for installing _archR_.
 # Working with archR
 ```{r setup-two, echo=TRUE}
 # Load archR
-#library(archR)
-devtools::load_all()
+library(archR)
+
 
 # Set seed for reproducibility
 seed_val <- 11992288
