--- a/vignettes/archR.Rmd
+++ b/vignettes/archR.Rmd
@@ -29,32 +29,46 @@ learning approach for identifying different core promoter sequence
 architectures. 
 _archR_ implements an algorithm based on chunking and iterative 
 processing. 
-While matrix factorization approaches (and their applications) are known to 
-scale poorly for large amounts of data, this approach enables scalable 
+While matrix factorization-based applications are known to scale poorly for 
+large amounts of data, archR's algorithm enables scalable 
 processing of large number of sequences.
-To our knowledge, this is a novel application of NMF on sequence data.
-Sequence motifs, their positional specificities and complex 
-inter-relationships, all are simultaneously inferred from the data. 
+A notable advantage of archR is that the sequence motifs -- the lengths and 
+positional specificities of individual motifs, and complex inter-relationships 
+where multiple motifs are at play in tandem, all are simultaneously inferred 
+from the data.
+To our knowledge, this is a novel application of NMF on biological sequence data.
+For a more detailed discussion, see preprint/publication [TODO: link here].
 
 
-This vignette demonstrates archR's usage. 
-Please refer to the paper (cite paper/preprint) for a description and 
-discussion of _archR_'s algorithm.
+This vignette demonstrates archR's usage with the help of a synthetic DNA 
+sequences data set. 
+Please refer to the paper (TODO: cite paper/preprint) for a detailed description of
+_archR_'s algorithm.
+The paper also discusses the various parameters and their settings.
+For completeness, the following section gives a brief overview of the algorithm.
 
+# archR's algorithm
+_archR_ implements a chunking-based iterative procedure. Further details to follow.
 
 # Installation
 _archR_ is currently made available via Github, thus use the following procedure
 for installing _archR_.
 ```{r archR-install, echo=TRUE, eval=FALSE}
-# install.packages("remotes")
-# remotes::install_github("snikumbh/archR", build_vignettes = TRUE)
+install.packages("remotes")
+remotes::install_github("snikumbh/archR", build_vignettes = TRUE)
+ 
 ```
+In case of any errors, please consider looking up [https://github.com/snikumbh/archR](https://github.com/snikumbh/archR). 
+If any points noted with regards to troubleshooting _archR_'s installation, please
+file a [new issue](https://github.com/snikumbh/archR/issues/new).
+
+
 
 # Working with archR
 ```{r setup-two, echo=TRUE}
 # Load archR
 library(archR)
-library(Biostrings)
+library(Biostrings, quietly = TRUE)
 
 
 # Set seed for reproducibility
@@ -67,36 +81,45 @@ set.seed(seed_val)
 
 In order to demonstrate the efficacy of _archR_, we use _archR_ to cluster DNA 
 sequences in a synthetic data set which was generated as follows. 
-A set of 200 simulated DNA sequences was generated, each 200 nucleotides long 
+A set of 200 simulated DNA sequences was generated, each 100 nucleotides long 
 and with uniform probability for all nucleotides. 
-These sequences have four clusters in them, each with 250 sequences. 
+These sequences have four clusters in them, each with 50 sequences. 
 The profiles of the four clusters are:
 
 
 | Cluster | Characteristic Motifs | Motif Occurrence Position | #Sequences 
 |----------|:----------|:----------|----------
-| A | Dinucleotide repeat `AT` | every 10 nt | 250
-| B | `GATTACA` | 40 | 250
+| A | Dinucleotide repeat `AT` | every 10 nt | 50
+| B | `GATTACA` | 40 | 50
 |   | `GAGAG` | 60 |
-| C | `GAGAG` | 60 | 250
-| D | `GAGAG` | 80 | 250
+| C | `GAGAG` | 60 | 50
+| D | `GAGAG` | 80 | 50
 |   | `TCAT`  | 40 |
 <!-- ----------|----------|----------|----------| -->
 
 All the motifs across the clusters were planted with a mutation rate of 0.
 
 
-## Feature representation
+## Input and feature representation
 
 We use one-hot encoding to represent the dinucleotide profiles of each sequence 
 in the data set.
+_archR_ provides functions to read input from (a) a FASTA file, and 
+(b) `Biostrings::DNAStringSet` object.
+
+### Reading input as FASTA file
+The function `prepare_data_from_FASTA()` enables one-hot-encoding the DNA sequences in 
+the given FASTA file.
+The one-hot-encoded sequences are returned as a sparse matrix with as many columns 
+as the number of sequences in the FASTA file and (#sequences x $4^{2}$) rows 
+when dinucleotide profiles is selected. The number of rows will be (#sequences x $4$) when 
+single nucleotide profiles is selected. See the `sinuc_or_dinuc` argument.
 
 
-The function `prepare_data_from_FASTA` provides with the functionality to 
-produce one-hot encoded DNA sequences stored in a FASTA file.
-Setting the logical argument `rawSeq` to `TRUE`, the function returns the raw 
-sequences as a `DNAStringSet` object, with `FALSE` it returns the coulmn-wise 
-one-hot encoded representation, i.e., sequences are arranged along the columns.
+Upon setting the logical argument `rawSeq` to `TRUE`, the function returns the raw 
+sequences as a `DNAStringSet` object, with `FALSE` it returns the column-wise 
+one-hot encoded representation as noted above.
+When `rawSeq` is `TRUE`, `sinuc_or_dinuc` argument is ignored.
 
 ```{r load-example-data, echo=TRUE}
 # Creation of one-hot encoded data matrix from FASTA file
@@ -104,7 +127,7 @@ inputFastaFilename <- system.file("extdata", "example_data.fa",
                                   package = "archR", 
                                   mustWork = TRUE)
 
-# Specifying dinuc generates dinucleotide features
+# Specifying `dinuc` generates dinucleotide features
 inputSeqsMat <- archR::prepare_data_from_FASTA(inputFastaFilename,
                                                   sinuc_or_dinuc = "dinuc")
 
@@ -117,9 +140,12 @@ sinuc <- Biostrings::DNA_BASES
 
 ```
 
-If you already have a `BiocStrings::DNAStringSet` object, you can use the 
-`get_one_hot_encoded_seqs` function which directly accepts a `DNAStringSet` 
+
+### Reading input as a DNAStringSet object
+If you already have a `BioStrings::DNAStringSet` object, you can use the 
+`get_one_hot_encoded_seqs()` function which directly accepts a `DNAStringSet` 
 object.
+
 ```{r load-example-data-2, echo=TRUE, eval=TRUE}
 # Creation of one-hot encoded data matrix from a DNAStringSet object
 inputSeqs_direct <- archR::get_one_hot_encoded_seqs(inputSeqsRaw, 
@@ -131,7 +157,7 @@ identical(inputSeqs_direct, inputSeqsMat)
 ## Visualize sequences as an image
 
 ```{r plot-seqs, echo=TRUE, fig.height=6, fig.width=5}
-# Visualize the sequences in a image matrix where the bases are assigned fixed
+# Visualize the sequences in a image matrix where the DNA bases are assigned fixed
 # colors
 
 archR::viz_matrix_of_acgt_image(as.character(inputSeqsRaw), 
@@ -146,9 +172,10 @@ archR::viz_matrix_of_acgt_image(as.character(inputSeqsRaw),
 
 
 ```{r setup-archR-config-call, echo=TRUE}
-### Set archR configuration
+# Set archR configuration
 archRconfig <- archR::archRSetConfig(
-        parallelize = FALSE,
+        parallelize = TRUE,
+        nCores = 4,
         nIterationsUse = 100,
         kMin = 1,
         kMax = 20,
@@ -160,13 +187,13 @@ archRconfig <- archR::archRSetConfig(
                      plotVerboseFlag = FALSE)
 )
 
-### You can use parallelization by setting 'parallelize = TRUE' and 
-### 'nCoresUse = n', where 'n' is the number of cores to be used.
+# You can use parallelization by setting 'parallelize = TRUE' and 
+# 'nCoresUse = n', where 'n' is the number of cores to be used.
 
 
 
 
-### Call/Run archR
+# Call/Run archR
 perform_iters <- 2
 archRresult <- archR::archR(config = archRconfig,
                                seqsMat = inputSeqsMat,
@@ -193,8 +220,8 @@ _archR_ also stores the NMF basis vectors corresponding to each cluster in
 every iteration in the variable `clustBasisVectors`. `clustBasisVectors` 
 is a numbered list corresponding to the number of iterations performed.
 This is then again a list holding two pieces of information: the number of 
-basis vectors (`nBasisVectors`/`numeric`) and the basis vectors 
-(`basisVectors`/`matrix`).
+basis vectors (`nBasisVectors`) and the basis vectors 
+(`basisVectors`).
 
 ```{r archR-result-clust-factors}
 
@@ -253,12 +280,24 @@ One can visualize the NMF basis vectors as well as the sequence clusters.
 <!-- the call to `ggseqlogo`. The possible values are `custom`, `bits`. -->
 
 
-The clustered output from _archR_ can again be visualized as a matrix. Simply 
-sort the sequences based on the cluster labels assigned to them and call 
-`archR::viz_matrix_of_acgt` with the sorted order as shown.
-```{r visualize-clusters, echo=TRUE, fig.height=6, fig.width=5, eval=TRUE}
+The clustered output from _archR_ can again be visualized as a matrix. 
+Simply sort the sequences based on the cluster labels assigned to them and call 
+`archR::viz_matrix_of_acgt_image` with the sorted order as shown.
+```{r visualize-clusters-itr1, echo=TRUE, fig.height=6, fig.width=5, fig.cap="Result at iteration 1", eval=TRUE}
 
 itr <- 1
+seqsClustLabels <- archRresult$seqsClustLabels[[itr]]
+sorted_order <- sort(seqsClustLabels, index.return = TRUE)
+
+
+archR::viz_matrix_of_acgt_image(as.character(inputSeqsRaw[sorted_order$ix]), 
+                         position_labels = positions,
+                         savefilename = NULL)
+```
+
+```{r visualize-clusters-itr2, echo=TRUE, fig.height=6, fig.width=5, fig.cap="Result at iteration 2", eval=TRUE}
+
+itr <- 2
 seqsClustLabels <- archRresult$seqsClustLabels[[itr]]
 sorted_order <- sort(seqsClustLabels, index.return = TRUE)
 
@@ -270,9 +309,9 @@ archR::viz_matrix_of_acgt_image(as.character(inputSeqsRaw[sorted_order$ix]),
 <!-- ![_archR_ result on example data w/ clusters](./archR-result-example-data.png) -->
 
 
-The output in Figure 1 was generated by performing 100 bootstrapped iterations, 
-parallely by setting the following configuration parameters to _archR_:
-`nIterations = 100, nCoresUse = 4, parallelize = TRUE`.
+<!-- This output in Figure 1 was generated by performing 100 bootstrapped iterations,  -->
+<!-- parallely by setting the following configuration parameters to _archR_: -->
+<!-- `nIterations = 100, nCoresUse = 4, parallelize = TRUE`. -->
 
 # Conclusion
 
@@ -283,11 +322,14 @@ specificities.
 Note that the sequence architectures identified by archR have no limitations 
 due to the size of or gaps in the motifs, distance between motifs, compositional
 and positional variations in the individual motifs and their effects on the 
-complex interactions, and number of motifs involved in any interaction. 
-It is advisable to perform a large number of bootstrapped iterations for NMF in 
-_archR_. This potentially affects the computation time of _archR_. But being an 
-embarrasingly parallelizable case, this issue is alleviated. There are already 
-provisions in _archR_ to choose parallelization for speeding up computations.
+complex interactions, and number of motifs involved in any interaction.
+<!-- It is advisable to perform a large number of bootstrapped iterations for NMF in  -->
+<!-- _archR_.  -->
+<!-- This potentially affects the computation time of _archR_.  -->
+<!-- But being an  -->
+<!-- embarrasingly parallelizable case, this issue is alleviated.  -->
+<!-- There are already  -->
+<!-- provisions in _archR_ to choose parallelization for speeding up computations. -->
 
 # Session Info
 ```{r session_info, include=TRUE, echo=TRUE, results='markup'}
