--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Changes in version 0.1.2 (2020-11-11)
++ Fix staged installation error
++ CI with GHA
++ archR result list has new elements:
+    - `timeInfo` if timeFlag is TRUE;
+    - `clustSol` storing combined clusters from the last iteration of archR
++ Architectures/clusters sequence logos can be plotted with an `auto` y-axis limits 
+  for information content (0-max instead of 0-2)
++ TFBSTools moved from dependency to suggested
+
+
 Changes in version 0.99.3 (2019-10-21)
 + Can work with DNAStringSet object(s)
 
