--- a/vignettes/archR.Rmd
+++ b/vignettes/archR.Rmd
@@ -48,15 +48,17 @@ For a more detailed discussion, see preprint/publication [TODO: link here].
 
 This vignette demonstrates _archR_'s usage with the help of a synthetic DNA 
 sequences data set. 
-Please refer to the paper (TODO: cite paper/preprint) for a detailed description of
-_archR_'s algorithm.
+Please refer to the paper (TODO: cite paper/preprint) for a detailed 
+description of _archR_'s algorithm.
 The paper also discusses the various parameters and their settings.
 For completeness, the following section gives a brief overview of the algorithm.
 
 # _archR_'s algorithm
-_archR_ implements a chunking-based iterative procedure. Below is a schematic of archR's algorithm.
+_archR_ implements a chunking-based iterative procedure. Below is a 
+schematic of archR's algorithm.
 
-<img src="archR_algorithm_static_illustrator_cropped.png" width="550" align="center">
+<img src="archR_algorithm_static_illustrator_cropped.png" 
+width="550" align="center">
 
 <!-- ![Schematic of archR's algorithm]() -->
 <!-- ![Schematic of archR's algorithm](archR_algorithm_1080p_cropped.gif) -->
@@ -65,16 +67,17 @@ _archR_ implements a chunking-based iterative procedure. Below is a schematic of
 Further details to follow.
 
 # Installation
-_archR_ is currently made available via GitHub, thus, you can use the following procedure
-for installing _archR_.
+_archR_ is currently made available via GitHub, thus, you can use the 
+following procedure for installing _archR_.
 ```{r archR-install, echo=TRUE, eval=FALSE}
 install.packages("remotes")
 remotes::install_github("snikumbh/archR")
  
 ```
 In case of any errors, please consider looking up [https://github.com/snikumbh/archR](https://github.com/snikumbh/archR). 
-If none of the already noted points with regards to troubleshooting _archR_'s installation help, 
-please file a [new issue](https://github.com/snikumbh/archR/issues/new).
+If none of the already noted points with regards to troubleshooting
+_archR_'s installation help, please file a 
+[new issue](https://github.com/snikumbh/archR/issues/new).
 
 
 
@@ -122,31 +125,32 @@ _archR_ provides functions to read input from (a) a FASTA file, and
 (b) `Biostrings::DNAStringSet` object.
 
 ### Reading input as FASTA file
-The function `archR::prepare_data_from_FASTA()` enables one-hot-encoding the DNA sequences in 
-the given FASTA file.
-The one-hot-encoded sequences are returned as a sparse matrix with as many columns 
-as the number of sequences in the FASTA file and (#sequences x $4^{2}$) rows 
-when dinucleotide profiles is selected. The number of rows will be (#sequences x $4$) when 
-mononucleotide profiles is selected. See the `sinuc_or_dinuc` argument.
+The function `archR::prepare_data_from_FASTA()` enables one-hot-encoding the 
+DNA sequences in the given FASTA file.
+The one-hot-encoded sequences are returned as a sparse matrix with as many 
+columns as the number of sequences in the FASTA file and (sequence length x 
+$4^{2}$) rows when dinucleotide profiles is selected. The number of rows will 
+be (sequence length x $4$) when mononucleotide profiles is selected. See the 
+`sinuc_or_dinuc` argument.
 
 
-Upon setting the logical argument `rawSeq` to `TRUE`, the function returns the raw 
-sequences as a `Biostrings::DNAStringSet` object, with `FALSE` it returns the column-wise 
-one-hot encoded representation as noted above.
-When `rawSeq` is `TRUE`, `sinuc_or_dinuc` argument is ignored.
+Upon setting the logical argument `rawSeq` to `TRUE`, the function returns 
+the raw sequences as a `Biostrings::DNAStringSet` object, with `FALSE` it 
+returns the column-wise one-hot encoded representation as noted above.
+When `raw_seq` is `TRUE`, `sinuc_or_dinuc` argument is ignored.
 
 ```{r load-example-data, echo=TRUE}
 # Creation of one-hot encoded data matrix from FASTA file
-inputFastaFilename <- system.file("extdata", "example_data.fa", 
+inputFname <- system.file("extdata", "example_data.fa", 
                                   package = "archR", 
                                   mustWork = TRUE)
 
 # Specifying `dinuc` generates dinucleotide features
-inputSeqsMat <- archR::prepare_data_from_FASTA(inputFastaFilename,
+inputSeqsMat <- archR::prepare_data_from_FASTA(fasta_fname = inputFname,
                                                   sinuc_or_dinuc = "dinuc")
 
-inputSeqsRaw <- archR::prepare_data_from_FASTA(inputFastaFilename, 
-                                               rawSeq = TRUE)
+inputSeqsRaw <- archR::prepare_data_from_FASTA(fasta_fname = inputFname, 
+                                               raw_seq = TRUE)
 
 nSeqs <- length(inputSeqsRaw)
 positions <- seq(1, Biostrings::width(inputSeqsRaw[1]))
@@ -162,7 +166,7 @@ object.
 
 ```{r load-example-data-2, echo=TRUE, eval=TRUE}
 # Creation of one-hot encoded data matrix from a DNAStringSet object
-inputSeqs_direct <- archR::get_one_hot_encoded_seqs(inputSeqsRaw, 
+inputSeqs_direct <- archR::get_one_hot_encoded_seqs(seqs = inputSeqsRaw, 
                                                   sinuc_or_dinuc = "dinuc")
 identical(inputSeqs_direct, inputSeqsMat)
 ```
@@ -171,13 +175,11 @@ identical(inputSeqs_direct, inputSeqsMat)
 ## Visualize input sequences as an image
 
 ```{r plot-seqs, echo=TRUE, fig.height=6, fig.width=5}
-# Visualize the sequences in a image matrix where the DNA bases are assigned fixed
-# colors
+# Visualize the sequences in a image matrix where the DNA bases are 
+# assigned fixed colors
 
 archR::viz_seqs_as_acgt_mat_from_seqs(as.character(inputSeqsRaw), 
-                          position_labels = positions, 
-                          savefilename = NULL
-                          )
+                          pos_lab = positions, save_fname = NULL)
 
 ```
 
@@ -187,32 +189,32 @@ archR::viz_seqs_as_acgt_mat_from_seqs(as.character(inputSeqsRaw),
 Setup archR configuration as follows.
 ```{r setup-archR-config-call, echo=TRUE}
 # Set archR configuration
-archRconfig <- archR::archRSetConfig(
+archRconfig <- archR::archR_set_config(
         parallelize = TRUE,
-        nCoresUse = 2,
-        nIterationsUse = 100,
-        kMin = 1,
-        kMax = 20,
-        modSelType = "stability",
+        n_cores = 2,
+        n_iterations = 100,
+        k_min = 1,
+        k_max = 20,
+        mod_sel_type = "stability",
         tol = 10^-4,
         bound = 10^-8,
-        innerChunkSize = 100,
-        flags = list(debugFlag = FALSE, timeFlag = TRUE, verboseFlag = TRUE,
-                     plotVerboseFlag = FALSE)
+        inner_chunk_size = 100,
+        flags = list(debug = FALSE, time = TRUE, verbose = TRUE,
+                     plot = FALSE)
 )
 ```
 
-Once the configuration is setup, call the `archR::archR` function with user-specified 
-iterations.
+Once the configuration is setup, call the `archR::archR` function with 
+user-specified iterations.
 
 ```{r call-archR, echo=TRUE}
 # Call/Run archR
 perform_iters <- 2
 archRresult <- archR::archR(config = archRconfig,
-                               seqsMat = inputSeqsMat,
-                               seqsRaw = inputSeqsRaw,
-                               seqsPositions = positions,
-                               thresholdItr = perform_iters)
+                            seqs_ohe_mat = inputSeqsMat,
+                            seqs_raw = inputSeqsRaw,
+                            seqs_pos = positions,
+                            threshold_itr = perform_iters)
 
 ```
 
@@ -220,18 +222,21 @@ archRresult <- archR::archR(config = archRconfig,
 
 ## Understanding the result object from _archR_
 
-In the version `r packageVersion("archR")`, _archR_ naively returns a result object 
-which is a nested list.
+In the version `r packageVersion("archR")`, _archR_ naively returns a result 
+object which is a nested list.
 The list elements include: 
 1. the sequence cluster labels per iteration [`seqsClustLabels`]; 
-2. the collection of NMF basis vectors per iteration [`clustBasisVectors`]: each 
-is a list of two elements `nBasisVectors` and `basisVectors`;
+2. the collection of NMF basis vectors per iteration [`clustBasisVectors`]: 
+each is a list of two elements `nBasisVectors` and `basisVectors`;
 3. the clustering solution, [`clustSol`], which is obtained upon combining raw 
-clusters from the last iteration of archR. This element stores the clustering of 
-NMF basis vectors [`basisVectorsClust`] and the sequence clusters [`clusters`]; 
+clusters from the last iteration of archR. This element stores the clustering 
+of NMF basis vectors [`basisVectorsClust`] and the sequence clusters 
+[`clusters`]; 
 4. the raw sequences provided [`rawSeqs`]; 
-5. the configuration setting [`config`]; and 
-6. the call itself [`call`].
+5. if timeFlag is set, timing information (in minutes) per iteration 
+[`timeInfo`];
+6. the configuration setting [`config`]; and 
+7. the call itself [`call`].
 
 
 
@@ -257,11 +262,7 @@ head(archRresult$clustBasisVectors[[2]]$basisVectors)
 In this section we demonstrate how to visualize results from _archR_. 
 One can visualize the NMF basis vectors as well as the sequence clusters.
 
-<!-- ### Visualizing NMF basis vectors at any iteration -->
-<!-- We can visualize the basis vectors corresponding to each cluster at any  -->
-<!-- iteration.  -->
-<!-- These per-iteration basis vectors are available from the `archRresult` object  -->
-<!-- (see above Section). -->
+
 
 <!-- ```{r viz-BV-1, echo=TRUE, fig.height=2, fig.width=25} -->
 <!-- archR::viz_basis_vectors_as_seqlogo( -->
@@ -290,48 +291,36 @@ One can visualize the NMF basis vectors as well as the sequence clusters.
 
 
 
-<!-- ```{r visualize-basis-vectors-combined, echo=TRUE, fig.height=4, fig.width=25} -->
-<!-- archR::viz_basis_vectors_in_combined_heatmaps_seqlogos( -->
-<!--   archRresult$clustBasisVectors[[2]]$basisVectors, -->
-<!--   position_labels = positions, plotMethod = "bits", savePDFfilename = NULL -->
-<!-- ) -->
-<!-- ``` -->
-<!-- The `plotMethod` argument to functions producing sequence logos is supplied to  -->
-<!-- the call to `ggseqlogo`. The possible values are `custom`, `bits`. -->
+
 
 
 The clustered output from _archR_ can again be visualized as a matrix. 
 Simply sort the sequences based on the cluster labels assigned to them and call 
 `archR::viz_seqs_as_acgt_mat_from_seqs` with the sorted order as shown.
-```{r visualize-clusters-itr1, echo=TRUE, fig.height=6, fig.width=5, fig.cap="Figure: Clusters at iteration 1", eval=TRUE}
+```{r clust-itr1, fig.dim=c(5,6), fig.cap="Figure: Clusters at iteration 1"}
 
 itr <- 1
 seqsClustLabels <- archRresult$seqsClustLabels[[itr]]
 sorted_order <- sort(seqsClustLabels, index.return = TRUE)
 
 
-archR::viz_seqs_as_acgt_mat_from_seqs(as.character(inputSeqsRaw[sorted_order$ix]),
-                         position_labels = positions,
-                         savefilename = NULL)
+archR::viz_seqs_as_acgt_mat_from_seqs(
+  as.character(inputSeqsRaw[sorted_order$ix]), pos_lab = positions,
+  save_fname = NULL)
 ```
 
-```{r visualize-clusters-itr2, echo=TRUE, fig.height=6, fig.width=5, fig.cap="Figure: Clusters at iteration 2", eval=TRUE}
+```{r clust-itr2, fig.dim=c(5,6), fig.cap="Figure: Clusters at iteration 2"}
 
 itr <- 2
 seqsClustLabels <- archRresult$seqsClustLabels[[itr]]
 sorted_order <- sort(seqsClustLabels, index.return = TRUE)
 
 
-archR::viz_seqs_as_acgt_mat_from_seqs(as.character(inputSeqsRaw[sorted_order$ix]),
-                         position_labels = positions,
-                         savefilename = NULL)
+archR::viz_seqs_as_acgt_mat_from_seqs(
+  as.character(inputSeqsRaw[sorted_order$ix]), pos_lab = positions,
+  save_fname = NULL)
 ```
-<!-- ![_archR_ result on example data w/ clusters](./archR-result-example-data.png) -->
 
-
-<!-- This output in Figure 1 was generated by performing 100 bootstrapped iterations,  -->
-<!-- parallely by setting the following configuration parameters to _archR_: -->
-<!-- `nIterations = 100, nCoresUse = 4, parallelize = TRUE`. -->
 
 # Conclusion
 
@@ -340,16 +329,11 @@ complex interactions of different features together with their positional
 specificities.
 
 Note that the sequence architectures identified by _archR_ have no limitations 
-due to the size of the motifs or gaps in them, distance between motifs, compositional
-and positional variations in the individual motifs and their effects on the 
-complex interactions, and number of motifs involved in any interaction.
-<!-- It is advisable to perform a large number of bootstrapped iterations for NMF in  -->
-<!-- _archR_.  -->
-<!-- This potentially affects the computation time of _archR_.  -->
-<!-- But being an  -->
-<!-- embarrasingly parallelizable case, this issue is alleviated.  -->
-<!-- There are already  -->
-<!-- provisions in _archR_ to choose parallelization for speeding up computations. -->
+due to the size of the motifs or gaps in them, distance between motifs, 
+compositional and positional variations in the individual motifs and their 
+effects on the complex interactions, and number of motifs involved in any 
+interaction.
+
 
 # Session Info
 ```{r session_info, include=TRUE, echo=TRUE, results='markup'}
